# ida-chat-plugin

./: .gitignore  API_REFERENCE.md  CLAUDE.md  README.md  agentio.json  ida-plugin.json  ida_chat_cli.py  ida_chat_core.py  ida_chat_history.py  ida_chat_plugin.py  idachat.py  pyproject.toml
.claude/: settings.json
.github/workflows/: release.yml
project/: PROMPT.md
