[project]
name = "ida-chat"
version = "0.1.0"
description = "CLI chat interface for IDA Pro using Claude Agent SDK"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "ida-domain",
    "ida-settings>=3.3.0",
]

[project.scripts]
ida-chat = "ida_chat_cli:main"
idc = "ida_chat_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["ida_chat_cli.py", "ida_chat_core.py"]

[project.optional-dependencies]
dev = [
    "taskipy>=1.14.1",
    "python-semantic-release>=10.3.1",
]

[tool.taskipy.tasks]
current-version = "semantic-release version --print-last-released"
release-major = "semantic-release version --major --no-changelog"
release-minor = "semantic-release version --minor --no-changelog"
release-patch = "semantic-release version --patch --no-changelog"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv lock --upgrade-package ida-chat && uv build"
dist_path = "dist/"
major_on_zero = false
allow_zero_version = true
